started microservices for owner and manager actions